# RetinalExposureCalc

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
applications/: CMakeLists.txt  conanfile.py  rec-cli.cpp
scripts/utils/: update-sources.py
src/RetinalExposureCalc/: Calculator.cpp  Calculator.hpp
src/RetinalExposureCalc/Models/: ModelBase.cpp  ModelBase.hpp
src/RetinalExposureCalc/Models/PhysicalProperties/Ocular/RefractiveIndex/ReducedEye/Sellmeier/Vincellete/: Model.hpp
src/RetinalExposureCalc/Models/PhysicalProperties/Ocular/Transmission/CIE203_2012/: Direct.hpp  Total.hpp
src/RetinalExposureCalc/Models/PhysicalProperties/Ocular/Transmission/EffectiveTransmission/Schulmeister/: Model.hpp
src/RetinalExposureCalc/Models/PhysicalProperties/Ocular/Transmission/Manual/: Model.hpp
src/RetinalExposureCalc/Models/SchematicEyes/ReducedEye/Vincelette/: Model.cpp  Model.hpp
testing/: CMakeLists.txt  pre-tag-release.sh
testing/CatchTests/: Calculator.cpp  ReducedEyeModels.cpp  RefractiveIndexModels.cpp  TransmissionModels.cpp
